Mise en place du footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <a href="#" class="nav-link">Actualités</a>
             </li>
             <li class="nav-item active">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="/Evènements.html" target="_blank" class="nav-link">Évènements</a>
             </li>
           </ul>
         </div>
@@ -168,6 +168,122 @@
           </p>
           <a class="btn btn-light" href="#" role="button">Lire l'article</a>
         </div>
+      <div class="container">
+        <div class="col-sm-12">
+          <p></p>
+
+        </div>
+      </div>
+        <!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  >
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Retrouvez nous sur les réseaux :</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fa-solid fa-earth-americas me-3"></i>Sauver ma Terre
+          </h6>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perspiciatis ullam pariatur illo velit ex voluptatibus cupiditate quam. Ex, consequatur.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Nos partenaires
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Fish&risk</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Entreprise REPLANTE</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Vert chez moi</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            meetings
+          </h6>
+          <p>
+            <p class="text-reset">Strasbourg</p>
+          </p>
+          <p>
+            <p class="text-reset">Lyon</p>
+          </p>
+          <p>
+            <p class="text-reset">Paris</p>
+          </p>
+          <p>
+            <p class="text-reset">Bordeaux</p>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Contact
+          </h6>
+          <p><i class="fas fa-home me-3"></i> 11 rue verdoyant 83056,Toulon</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@savemyearth.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> 04 55 55 20 20</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold">Marc khamchanh</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
       </div>
   </body>
 </html>
