mise en place des mediaqueries

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a href="#" class="nav-link active">Home</a>
+              <a href="#home" class="nav-link active">Home</a>
             </li>
             <li class="nav-item active">
-              <a href="#" class="nav-link">Histoire</a>
+              <a href="#story" class="nav-link">Histoire</a>
             </li>
             <li class="nav-item active">
-              <a href="#" class="nav-link">Actualités</a>
+              <a href="#news" class="nav-link">Actualités</a>
             </li>
             <li class="nav-item active">
               <a href="/Evènements.html" target="_blank" class="nav-link">Évènements</a>
@@ -77,9 +77,9 @@
     </nav>
     <div class="container welcome">
       <div class="row">
-        <div class="col-md-12">
+        <div id="home" class="col-md-12">
           <div class="first">
-            <h1>Bienvenue sur notre page !</h1>
+            <h1 >Bienvenue sur notre page !</h1>
             <h2>Sauve ma Terre</h2>
             <button type="button" class="btn btn-primary">
               Liker
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-    <div class="container container-histoire">
+    <div  id="story"class="container container-histoire">
       <div class="row">
         <div class="col-sm-12">
           <div>
@@ -116,8 +116,8 @@
         </div>
       </div>
 
-      <div class="container-actu">
-        <h2>Actualités</h2>
+      <div id="news" class="container-actu">
+        <h2 >Actualités</h2>
       </div>
 
       <div class="row third">
@@ -176,17 +176,13 @@
       </div>
         <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
-  <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
   >
-    <!-- Left -->
     <div class="me-5 d-none d-lg-block">
       <span>Retrouvez nous sur les réseaux :</span>
     </div>
-    <!-- Left -->
 
-    <!-- Right -->
     <div>
       <a href="" class="me-4 text-reset">
         <i class="fab fa-facebook-f"></i>
@@ -205,9 +201,9 @@
     <div class="container text-center text-md-start mt-5">
       <!-- Grid row -->
       <div class="row mt-3">
-        <!-- Grid column -->
+
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
+
           <h6 class="text-uppercase fw-bold mb-4">
             <i class="fa-solid fa-earth-americas me-3"></i>Sauver ma Terre
           </h6>
@@ -215,11 +211,8 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perspiciatis ullam pariatur illo velit ex voluptatibus cupiditate quam. Ex, consequatur.
           </p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
+          
           <h6 class="text-uppercase fw-bold mb-4">
             Nos partenaires
           </h6>
@@ -233,11 +226,8 @@
             <a href="#!" class="text-reset">Vert chez moi</a>
           </p>
         </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
+          
           <h6 class="text-uppercase fw-bold mb-4">
             meetings
           </h6>
@@ -254,11 +244,9 @@
             <p class="text-reset">Bordeaux</p>
           </p>
         </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
+
           <h6 class="text-uppercase fw-bold mb-4">
             Contact
           </h6>
@@ -269,21 +257,16 @@
           </p>
           <p><i class="fas fa-phone me-3"></i> 04 55 55 20 20</p>
         </div>
-        <!-- Grid column -->
       </div>
-      <!-- Grid row -->
+
     </div>
   </section>
-  <!-- Section: Links  -->
 
-  <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
     <a class="text-reset fw-bold">Marc khamchanh</a>
   </div>
-  <!-- Copyright -->
 </footer>
-<!-- Footer -->
       </div>
   </body>
 </html>
