Ajout de la Deuxième page

--- a/index.html
+++ b/index.html
@@ -194,12 +194,10 @@
         <i class="fab fa-instagram"></i>
       </a>
     </div>
-    <!-- Right -->
   </section>
-  <!-- Section: Links  -->
   <section class="">
     <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
+
       <div class="row mt-3">
 
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
@@ -229,7 +227,7 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           
           <h6 class="text-uppercase fw-bold mb-4">
-            meetings
+            Nos associations
           </h6>
           <p>
             <p class="text-reset">Strasbourg</p>
@@ -250,7 +248,7 @@
           <h6 class="text-uppercase fw-bold mb-4">
             Contact
           </h6>
-          <p><i class="fas fa-home me-3"></i> 11 rue verdoyant 83056,Toulon</p>
+          <p><i class="fas fa-home me-3"></i> 11 rue verdoyant 67100,Strasbourg</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
             info@savemyearth.com
