Ecriture d'une nouvelle page pour liens

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Association voulant faire revivre notre planète qui meure a petit feu.">
+    <meta name="keywords" content="planète, écologie, arbres, terre, pollution">
+    <meta name="author" content="Marvc khamchanh">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,9 +72,9 @@
           </ul>
         </div>
         <form class="d-flex">
-          <button type="submit" class="btn btn-outline">
+          <a class="btn btn-primary btnDon" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
             Faire un Don <img src="/img/give.png" alt="give" />
-          </button>
+          </a>
         </form>
       </div>
     </nav>
@@ -81,10 +84,12 @@
           <div class="first">
             <h1 >Bienvenue sur notre page !</h1>
             <h2>Sauve ma Terre</h2>
-            <button type="button" class="btn btn-primary">
+            <form action="/Fictif.html" method="get" target="_blank">
+            <button type="submit" class="btn btn-primary">
               Liker
               <img src="/img/liker.png" style="width: 15px" alt="pouce" />
             </button>
+          </form>
           </div>
         </div>
       </div>
@@ -95,27 +100,21 @@
           <div>
             <h2>Histoire</h2>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque
-              corrupti ea ex aperiam temporibus odio dolor minus excepturi ipsa
-              inventore. Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Tenetur assumenda, eaque perspiciatis sint, voluptates quasi
-              architecto aspernatur at iste explicabo placeat laborum quibusdam
-              quae illum voluptate ratione ullam eligendi est odit nemo
-              reiciendis modi laboriosam quaerat commodi? Itaque inventore ex
-              recusandae totam consequatur, atque at architecto perspiciatis et
-              tenetur quisquam! Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Exercitationem assumenda perferendis labore
-              eligendi. Quibusdam repellendus labore iste voluptates quasi ad,
-              voluptas iusto expedita inventore ea enim assumenda error optio
-              nisi eaque quos magni temporibus cum provident odit laudantium
-              itaque possimus? Quas error alias, repellat cupiditate itaque
-              dolorum nobis expedita consequatur.
-            </p>
-            <br />
+             Sauve ma Terre est une association à but non lucratif (Loi 1901) et politiquement indépendante (statuts). Elle intervient sur tout le térritoire français en organisant des conférence, des meetings, des formations ... </p>
+
+            <p> Elle oeuvre pour la préservation de l'environnement, de la biodiversité et d'un cadre de vie sain pour ce qui l'entoure.
+            Son objectif est de permettre aux citoyens de devenir acteurs sur des enjeux d'environnement et de santé qui nous touche tous c'est à dire: 
+            <ul>
+              <li>Comment préserver notre patrimoine naturel environnementale</li>
+              <li>Savoir anticiper et réagir face aux atteintes à l'environnement</li>
+              <li>Adapter notre cadre de vie pour avoir une vie plus saine sans aaller a l'encontre de la nature</li>
+            </ul></p>
+
+            <p> Née en 2018, l'association "Sauve ma Terre" est issue de la réflexion de monsieur Gilles Bert et madame Emille lit, deux éminent chercheur en biologie animales. Celle-ci est partenaire avec d'autre association locale de lutte contre le rechauffement climatique, elle represente sont département en tant que présidente des association environnementale.</p>
+           
           </div>
         </div>
       </div>
-
       <div id="news" class="container-actu">
         <h2 >Actualités</h2>
       </div>
@@ -127,12 +126,9 @@
 
           <img src="/img/Pic-1.jpg" alt="pinguin" width="300px" />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex vero
-            eligendi nihil error magni officiis iste sequi voluptatum minus
-            labore ipsam quas, deleniti ullam porro recusandae maiores natus.
-            Porro, at?...
+            La combustion du charbon, du pétrole et du gaz produit du dioxyde de carbone et du protoxyde d'azote. L'abattage des forêts (déforestation). Les arbres contribuent à réguler le climat en absorbant le dioxyde de carbone (CO2) de l'atmosphère...
           </p>
-          <a class="btn btn-light" href="#" role="button">Lire l'article</a>
+          <a class="btn btn-light" href="/Fictif.html" role="button">Lire l'article</a>
         </div>
         <div class="col-sm-4 third-1">
           <h3>Une Extinction Progressive</h3>
@@ -144,12 +140,9 @@
             height="200px"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis enim
-            quis laudantium molestias officia. Magni voluptatum aliquam
-            quibusdam vero ratione, necessitatibus debitis fuga veniam illo,
-            mollitia impedit culpa labore rem.
+            Tous les ans, plus de 26 000 espèces animales et végétales disparaissent de la surface de la Terre. Si l'on parle d'une sixième extinction de masse, c'est que 15 à 37% de toute la biodiversité mondiale devrait avoir disparu d'ici à 2050...
           </p>
-          <a class="btn btn-light" href="#" role="button">Lire l'article</a>
+          <a class="btn btn-light" href="/Fictif.html" role="button">Lire l'article</a>
         </div>
         <div class="col-sm-4 third-1">
           <h3>Polution et Pathologie</h3>
@@ -161,17 +154,13 @@
             height="200px"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quia,
-            temporibus fugit quam explicabo, natus non dicta expedita similique
-            facere accusamus quas consequatur totam maiores debitis eos officia!
-            Eaque
+            Respirer l'air pollué pendant plusieurs années peut avoir certains problèmes de santé : une maladie chronique des poumons, comme la bronchite chronique; une maladie cardiovasculaire, c'est-à-dire une maladie du cœur et des vaisseaux sanguins...
           </p>
-          <a class="btn btn-light" href="#" role="button">Lire l'article</a>
+          <a class="btn btn-light" href="/Fictif.html" role="button">Lire l'article</a>
         </div>
       <div class="container">
         <div class="col-sm-12">
           <p></p>
-
         </div>
       </div>
         <!-- Footer -->
@@ -206,7 +195,7 @@
             <i class="fa-solid fa-earth-americas me-3"></i>Sauver ma Terre
           </h6>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus perspiciatis ullam pariatur illo velit ex voluptatibus cupiditate quam. Ex, consequatur.
+            Association a but non lucratif qui lutte contre le réchauffement climatique dû à la pollution et a la surexploitation de notre planète.
           </p>
         </div>
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -227,7 +216,7 @@
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           
           <h6 class="text-uppercase fw-bold mb-4">
-            Nos associations
+            Nos antennes
           </h6>
           <p>
             <p class="text-reset">Strasbourg</p>
@@ -262,7 +251,7 @@
 
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2021 Copyright:
-    <a class="text-reset fw-bold">Marc khamchanh</a>
+    <a class="text-reset fw-bold">Marc khamchanh</a>(site fictif)
   </div>
 </footer>
       </div>
