mise en page et correction du code

--- a/Evènements.html
+++ b/Evènements.html
@@ -59,7 +59,7 @@
     <div class="container hautDePage">
       <div class="row">
         <div class="col-sm-12">
-          <h1>Réservez vos places</h1>
+          <h1>Réserver vos places</h1>
         </div>
       </div>
     </div>
