--- a/Evènements.html
+++ b/Evènements.html
@@ -162,7 +162,7 @@
                     <i class="fa-solid fa-earth-americas me-3"></i>Sauver ma Terre
                   </h6>
                   <p>
-                    Association a but non lucratif qui lutte contre le réchauffement climatique dû à la pollution et a la surexploitation de notre planète.
+                    Association a but non lucratif qui lutte contre le réchauffement climatique dû à la pollution et a la surexploitation des ressources de notre planète.
                   </p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
