--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style.css" />
     <script
       src="https://kit.fontawesome.com/90c2f345b2.js"
       crossorigin="anonymous"
@@ -72,7 +72,7 @@
           </ul>
         </div>
         <form class="d-flex">
-          <a class="btn btn-primary btnDon" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
+          <a class="btn btnDon" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
             Faire un Don <img src="/img/give.png" alt="give" />
           </a>
         </form>
