boutton faire un don le style ne prend pas

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </ul>
         </div>
         <form class="d-flex">
-          <a class="btn btnDon" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
+          <a class="btn btn-light" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
             Faire un Don <img src="/img/give.png" alt="give" />
           </a>
         </form>
