--- a/Evènements.html
+++ b/Evènements.html
@@ -50,7 +50,7 @@
           </ul>
         </div>
         <form class="d-flex">
-          <a class="btn btn-primary btnDon" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
+          <a class="btn btn-light" href="/Fictif.html" role="button" target="_blank" class="btn btn-outline">
             Faire un Don <img src="/img/give.png" alt="give" />
           </a>
         </form>
