Gros pb avec le boutton Don sur netlifly

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1 >Bienvenue sur notre page !</h1>
             <h2>Sauve ma Terre</h2>
             <form action="/Fictif.html" method="get" target="_blank">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btnlike">
               Liker
               <img src="/img/liker.png" style="width: 15px" alt="pouce" />
             </button>
